@@ -102,6 +102,9 @@ class DialerProcess extends AbstractProcess
      */
     private $_infoAgentes = array(); 
 
+    // Lista de intentos de login de agente. TODO: estudiar combinación con _infoAgentes
+    private $_intentoLoginAgente = array();
+
     function inicioPostDemonio($infoConfig, &$oMainLog)
     {
         $bContinuar = TRUE;
@@ -2081,6 +2084,7 @@ PETICION_LLAMADAS;
                 if ($this->DEBUG) {
                     $this->oMainLog->output("DEBUG: AgentLogin({$listaECCP[4]}) detectado");
                 }
+                $this->quitarIntentoLoginAgente($listaECCP[4]);
                 if ($params['Response'] == 'Success') {
                     $this->_infoAgentes[$listaECCP[4]] = $this->generarEstadoInicialAgente();
                     $this->_infoAgentes[$listaECCP[4]]['Uniqueid'] = $params['Uniqueid'];
@@ -3437,6 +3441,23 @@ INFO_FORMULARIOS;
             $this->oMainLog->output("DEBUG: EXIT OnHangup");
         }
         return FALSE;
+    }
+
+    // Función para llevar la cuenta de un intento de login vía Originate
+    function agregarIntentoLoginAgente($sAgente, $sExtension)
+    {
+        $this->_intentoLoginAgente[$sAgente] = $sExtension;
+    }
+    
+    function quitarIntentoLoginAgente($sAgente)
+    {
+    	unset($this->_intentoLoginAgente[$sAgente]);
+    }
+
+    function obtenerIntentoLoginAgente($sAgente)
+    {
+        return isset($this->_intentoLoginAgente[$sAgente]) 
+            ? $this->_intentoLoginAgente[$sAgente] : NULL;
     }
 
     // Callback llamado cuando un agente se logonea a una cola
