@@ -1,3 +1,5 @@
+* Dialer (ECCP): Added "extension" and "channel" fields to response for 
+  "getagentstatus" request.
 * Agent Console: display error diagnostic messages when pause/unpause fails. 
   Also display attempted hangup channel when Hangup operation failed.
 * Agents, Break Administrator, Campaigns Out: undo use of <button> inside of <a>
